src/objects/PYME001_Competidor__c.object
<CustomObject>
    <description>Nuevo objeto para pyme Competidor</description>
    <fields>
        <fullName>Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>campo pyme</description>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competidores</relationshipLabel>
        <relationshipName>Competidores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_PYME_Reporte__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporte PyME</label>
        <referenceTo>MX_PyME_Reporte__c</referenceTo>
        <relationshipLabel>Competidores</relationshipLabel>
        <relationshipName>Competidores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_PYME_Sitio_Web__c</fullName>
        <defaultValue>&apos;www.&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Sitio Web</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PYME_pr_Parcipacion__c</fullName>
        <description>Nuevo campo participacion</description>
        <label>% Participación</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Competidor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PYME_pr_Parcipacion__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre del Competidor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competidores</pluralLabel>
    <recordTypes>
        <fullName>Competidor_PyME</fullName>
        <active>true</active>
        <label>Competidor PyME</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>